# Rust-C-lib-wrapper

./: Cargo.toml  README.md
include/: main.c
src/: build.rs  lib.rs
